[package]
name = "cert"
version = "0.0.0"
edition = "2021"

[dependencies]
tspppkg = { package = "tspp", version = "0.0.1", path = "../tspp-v0.0.1" }
cryptopkg = { package = "crypto", version = "0.0.5", path = "../crypto-v0.0.5" }
rand_core = { version = "*", features = ["getrandom"] }
rand_chacha = "*"
chrono = "*"